# polopt_carbon

./: .gitignore  MANIFEST.in  README.md  _quarto.yml  conda-lock.yml  config.yaml  custom.scss  environment.yml  index.qmd  pyproject.toml
.quarto/idx/: about.qmd.json  index.qmd.json
.quarto/project-cache/: deno-kv-file
.quarto/xref/: INDEX
_site/: about.html  index.html  search.json
docs/: about.html  index.html  search.json
docs/site_libs/bootstrap/: bootstrap-2871f0bff6da1ee5959dbf0f813d079d.min.css
polopt_carbon/: __init__.py  cli.py  core.py  core_after_gemini.py  core_before_gemini.py  core_that_works.py  core_with_comments.py  io.py  rules.py  validate.py
polopt_carbon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
polopt_carbon/data/: __init__.py  modis_glc_crosswalk.csv  rg_lookup_exploded.csv
scripts/: polopt_carbon_qgis.py  process_rg_lookup1.py  process_rg_lookup2.py  process_rg_lookup_validation.py
