[project]
name = "polopt-carbon"
version = "0.1.0"
description = "Compute carbon coefficients from LULC and carbon-zone layers."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
  { name = "Renato Vargas" }
]

dependencies = [
  "geopandas>=0.14",
  "rasterio>=1.3",
  "rioxarray>=0.15",
  "numpy>=1.24",
  "pandas>=2.0",
  "pyproj>=3.5",
  "shapely>=2.0",
  "typer[all]>=0.12"
]

# console entry-point so users get the `polopt-carbon` command
[project.scripts]
polopt-carbon = "polopt_carbon.cli:main"

# --- Build configuration ---
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# --- setuptools find rules ---
[tool.setuptools.packages.find]
where = ["."]
include = ["polopt_carbon*"]
exclude = ["tests*", "docs*", "notebooks*"]

# --- Typer pretty errors (optional nicety) ---
[tool.typer]
pretty_exceptions_enable = true
